[#56] Fix overflow issues (almost).

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden; /* hide the sliding menus */
+}
+
 body.waiting * {
   cursor: progress;
 }
